--- a/donors-project/index.html
+++ b/donors-project/index.html
@@ -365,7 +365,7 @@ function openTab(evt, tabName) {
 </head>
 <body>
 <div class="tab" style="padding-left:15px; background-color:purple;">
-<h1 style="color:#FFFFFF;">The <b>DONORS</b> Project | <span style="font-size:0.7em">A Omer Toledano Production</span></h1>
+<h1 style="color:#FFFFFF;">The <b>DONORS</b> Project | <span style="font-size:0.7em">An Omer Toledano Production</span></h1>
 </div>
 
 <div class="tab">
