--- a/higayon/index.html
+++ b/higayon/index.html
@@ -3,7 +3,7 @@
         <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script> <!-- jQuery source -->
     </head>
     <body>
-       
+       <div id="controlAddIn"></div>
         <script>
 		//Get FILE start
 		function httpGet(theUrl,callback)
