--- a/higayon/index.html
+++ b/higayon/index.html
@@ -3,7 +3,7 @@
         <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script> <!-- jQuery source -->
     </head>
     <body>
-       <iframe id="myIframe" src="http://www.higayon.co.il/tash/sechel1605.html" ></iframe>
+       <iframe id="myIframe" src="http://www.higayon.co.il/tash/sechel1605.html" width="100%"></iframe>
         <script>
   
         $(function(){
