--- a/higayon/crossword.html
+++ b/higayon/crossword.html
@@ -38,7 +38,7 @@ function includeHTML() {
 <body>
 <h1>היגיון לאבא</h1>
 <input id="HigayonURL" type="text" width="%100">
-<div w3-include-html="http://www.higayon.co.il/tash/sechel1611.html"></div>
+<div w3-include-html="index.html"></div>
 
 <script>
 includeHTML();
