--- a/higayon/iframe.html
+++ b/higayon/iframe.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<iframe width="100%" height="100%" src="http://higayon.co.il/"></iframe>
+<iframe width="100%" height="100%" src="http://higayon.co.il/index.html"></iframe>
 </body>
 </html>
