--- a/index.html
+++ b/index.html
@@ -125,13 +125,10 @@
                     <a class="twitter" href="https://twitter.com/OmerToledano" target="_blank"><i class="icon-social-twitter"></i></a>
                   </li>
                   <li>
-                    <a class="instagram" href="https://www.instagram.com/omert33/" target="_blank"><i class="icon-social-instagram"></i></a>
+                    <a class="instagram" href="https://www.instagram.com/omer.toledano.poet/" target="_blank"><i class="icon-social-instagram"></i></a>
                   </li>
                   <li>
                     <a class="linkedin" href="https://www.linkedin.com/in/omertoledano/" target="_blank"><i class="icon-social-linkedin"></i></a>
-                  </li>
-                  <li>
-                    <a class="google" href="https://plus.google.com/+OmerToledano" target="_blank"><i class="icon-social-google"></i></a>
                   </li>
 				</ul>
                 <div class="header-button wow fadeInUp" data-wow-delay="1s">
@@ -353,7 +350,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/CJCUC_Logo.jpg">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="http://cjcuc.org">
+                      <a class="link" href="https://web.archive.org/web/20221210152750/https://www.cjcuc.org/">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -404,7 +401,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/Blessing_Bethlehem.jpg">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="http://www.blessingbethlehem.com">
+                      <a class="link" href="https://web.archive.org/web/20220430220914/https://www.blessingbethlehem.com/">
                         <i class="icon-link"></i>
                       </a>
                     </div>
