--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   transform: translateY(calc(-50% - 3px)) translateX(calc(-50% - 3px));
   border: 3px solid #fff;
   overflow: hidden;
+  z-index:99;
 }
 .profil-img > img {
   display: block;
