--- a/index.html
+++ b/index.html
@@ -33,13 +33,10 @@
 </style>
  </head>
   <body>
-<canvas id="canvas"  width="1000" height="320" style="display:block; width: 100%;padding: 0px; margin-top:-15px;margin-bottom:15px;">
+<canvas id="canvas"  width="1000" height="320" style="display:block; width: 100%;padding: 0px; margin-top:-15px;margin-bottom:15px;"></canvas>
 <div class="profil-img">
     <img src="assets/img/about/Omer_Toledano_646x646.jpg" alt="">
   </div>
-
-</canvas>
-
 <form action="#" method="get" style="
  ">
   <table style="display:table; margin-left:auto; margin-right:auto" class="noborder">
