--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   transform: translateY(calc(-50% - 3px)) translateX(calc(-50% - 3px));
   border: 3px solid #fff;
   overflow: hidden;
-  
+  z-index:999;
 }
 .profil-img > img {
   display: block;
@@ -29,12 +29,12 @@
   -ms-transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%) translateX(-50%);
-  z-index:999;
+  
 }
 </style>
  </head>
   <body>
-<canvas id="canvas"  width="1000" height="320" style="display:block; width: 100%;padding: 0px; margin-top:-15px;margin-bottom:15px;"></canvas>
+<canvas id="canvas"  width="1000" height="320" style="display:block; width: 100%;padding: 0px; margin-top:-15px;margin-bottom:15px; z-index:-99;"></canvas>
 <div class="profil-img">
     <img src="assets/img/about/Omer_Toledano_646x646.jpg" alt="">
   </div>
