--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Omer Toledano • Online Professional</title>
+    <title>Omer Toledano • Instance of Human</title>
 <style>
 .profil-img {
   position: absolute;
