--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <div class="profil-img">
     <img src="assets/img/about/Omer_Toledano_646x646.jpg" alt="" />
   </div>
+  <center><h1>Omer Toledano • Instance of Human</h1></center>
 <form action="#" method="get" style="">
   <table style="display:table; margin-left:auto; margin-right:auto" class="noborder">
     <tbody>
